[gd_scene load_steps=15 format=3 uid="uid://0yjbl2vc5ry"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_3sh1a"]
[ext_resource type="Script" path="res://scenes/audio_demo/objects/pickable_switch_grab_point.gd" id="2_g30b7"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="6_i7s5k"]
[ext_resource type="PackedScene" uid="uid://hlmes83xhgs5" path="res://assets/digitaln8m4r3/models/token/token.glb" id="6_kty1t"]
[ext_resource type="Resource" uid="uid://pr3rbevfhqn2" path="res://scenes/audio_demo/poses/pose_coin_left.tres" id="7_6um68"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="8_07ehs"]
[ext_resource type="Resource" uid="uid://dqfmtmgru4jki" path="res://scenes/audio_demo/poses/pose_coin_right.tres" id="9_gfihf"]
[ext_resource type="Material" uid="uid://gs6p8qxg43n8" path="res://assets/digitaln8m4r3/materials/token.material" id="9_mer2t"]
[ext_resource type="PackedScene" uid="uid://bikkxsbo8x7sd" path="res://addons/godot-xr-tools/audio/pickable_audio.tscn" id="10_qj0es"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="10_qldmo"]
[ext_resource type="Resource" uid="uid://crbmdfy85d5qy" path="res://scenes/audio_demo/audio/pickable/audio_token.tres" id="11_6a1e5"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0dw32"]
points = PackedVector3Array(0.0132754, 0.00372857, 0.0175208, -0.00217545, -0.00195705, -0.0278795, -0.002359, -0.000233333, -0.029845, -0.0253446, 0.00273732, 0.0145486, 0.003366, -0.00320399, 0.027424, 0.029123, -0.00221429, -0.0121826, -0.023359, -0.00419524, -0.0062382, 0.0083176, 0.00372857, -0.0191136, -0.0263312, 0.00174762, -0.018127, 0.0271374, 0.00174762, 0.016528, 0.0202064, -0.00419524, 0.0016732, -0.016428, -0.00221429, 0.027424, 0.0023794, 0.00273732, 0.0284168, 0.025158, 0.00273732, -0.014162, 0.0132754, -0.00320399, -0.0260508, -0.0223724, 0.00372857, -0.00822381, 0.0271374, -0.00221429, 0.016528, 0.0023794, 0.00273732, -0.029023, -0.0154414, -0.00320399, -0.025058, -0.0283168, -0.00320399, 0.0026598, 0.0162414, 0.00174762, 0.027424, -0.0154414, 0.00174762, -0.0280302, -0.0144486, 0.00372857, 0.0175208, -0.016428, 0.00174762, 0.027424, -0.0025598, -0.00221429, 0.0313952, -0.0253446, -0.00320399, 0.0145486, 0.0152548, 0.00273732, -0.025058, -0.0253446, -0.00320399, -0.0151548, 0.0281302, 0.00273732, -0.0022794, -0.0283168, 0.00273732, 0.0026598, 0.0281302, -0.00221429, -0.0171342, -0.020393, -0.00419524, 0.0036526)

[sub_resource type="CylinderMesh" id="CylinderMesh_v02xf"]
top_radius = 0.03
bottom_radius = 0.03
height = 0.003

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s6qbj"]
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[node name="Token" groups=["Coin"] instance=ExtResource("1_3sh1a")]
collision_mask = 65543
mass = 0.05
continuous_cd = true
max_contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource("2_g30b7")

[node name="GrabPointHandLeft" parent="." index="0" instance=ExtResource("6_i7s5k")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, -0.0190629, -0.00637263, -0.0459898)
hand_pose = ExtResource("7_6um68")

[node name="GrabPointHandRight" parent="." index="1" instance=ExtResource("8_07ehs")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0.019, -0.006, -0.046)
hand_pose = ExtResource("9_gfihf")

[node name="GrabPointGripLeft" parent="." index="2" instance=ExtResource("6_i7s5k")]
transform = Transform3D(1, 0, 0, 0, -0.906308, -0.422618, 0, 0.422618, -0.906308, -0.019, 0.006, 0.046)
hand_pose = ExtResource("7_6um68")

[node name="GrabPointGripRight" parent="." index="3" instance=ExtResource("8_07ehs")]
transform = Transform3D(1, 0, 0, 0, -0.906308, -0.422618, 0, 0.422618, -0.906308, 0.019, 0.006, 0.046)
hand_pose = ExtResource("9_gfihf")

[node name="CollisionShape3D" parent="." index="4"]
shape = SubResource("ConvexPolygonShape3D_0dw32")

[node name="token" parent="." index="5" instance=ExtResource("6_kty1t")]

[node name="Token" parent="token" index="0"]
surface_material_override/0 = ExtResource("9_mer2t")

[node name="GrabHighlight" type="Node3D" parent="." index="6"]
script = ExtResource("10_qldmo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabHighlight" index="0"]
mesh = SubResource("CylinderMesh_v02xf")
surface_material_override/0 = SubResource("StandardMaterial3D_s6qbj")

[node name="PickableAudio" parent="." index="7" instance=ExtResource("10_qj0es")]
pickable_audio_type = ExtResource("11_6a1e5")

[editable path="token"]
